# stem-separation-browser

./: README.md  index.html  package.json  vite.config.js
public/: demucs_dsp.js  demucs_dsp.wasm  sw.js
src/: demucs-loader.js  main.js
wasm-dsp/: CMakeLists.txt  api.cpp  dsp.cpp  dsp.hpp
